--- a/helmchart/charts/minio/values.yaml
+++ b/helmchart/charts/minio/values.yaml
@@ -7,3 +7,5 @@ appName: minio
 source:
     repoURL: https://github.com/minio/minio
     path: helm/minio
+    parametersEnabled: false
+    parameters: {}
