Add parameters to postgresql manifest

--- a/helmchart/charts/minio/values.yaml
+++ b/helmchart/charts/minio/values.yaml
@@ -7,5 +7,6 @@ appName: minio
 source:
     repoURL: https://github.com/minio/minio
     path: helm/minio
-    parametersEnabled: false
-    parameters: {}
+    helm:
+        parametersEnabled: false
+        parameters: {}
